# sndhllhc-raw-to-digi

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  raw_info_dump.cxx  raw_to_digi.cxx
include/: CUSTOM_SNDLinkDef.hxx  CUSTOM_Wrapper.h  FEDRawData.h  FEDRawDataCollection.h  SNDHLLHCBothLinkDef.hxx  SNDHLLHCLinkDef.hxx  SiStripRawToDigi.h  Wrapper.h  edm__DoNotRecordParents.h  edm__ViewTypeChecker.h  edm__WrapperBase.h  edm__Wrapper_FEDRawDataCollection_.h
include/digi/: SNDHLLHCDigiHeaders.h  SNDHLLHCDigiLinkDef.hxx
include/raw/: SNDHLLHCRawHeaders.h
python/: cms_raw_evt_building.py  processing_pipeline.py
python/libs/: processing_status.py  run_conversion.py  run_digitization.py  run_dqm.py
raw_info/: CMakeLists.txt
raw_info/src/: raw_info_dump.cxx
raw_to_digi/: CMakeLists.txt
raw_to_digi/include/: FEDFullDebugHeader.h  SiStripDigiClustering.h  SiStripDigiFilter.h  SiStripFEDBuffer.h  SiStripFEDBufferComponents.h  SiStripFEDChannel.h  SiStripHardwareConstants.h  SiStripPosition.h  SiStripRawToDigi.h
raw_to_digi/src/: SiStripFEDBuffer.cxx  SiStripFEDBufferComponents.cxx  raw_to_digi.cxx  real_time_monitoring.cxx
sistrip_io/: CMakeLists.txt  FEDRawData.h  FEDRawDataCollection.h  SiStripCluster.h  SiStripDetInfo.h  SiStripDigi.h  SiStripIOHeaders.h  SiStripIOLinkDef.hxx  SiStripIOSource.cxx  edm__Wrapper_FEDRawDataCollection_.h
src/: SNDHLLHCSource.cxx
src/digi/: SNDHLLHCDigiSource.cxx
src/raw/: SNDHLLHCRawSource.cxx
tbd/include/: ConstantsForHardwareSystems.h  DetId.h  SiStripDigi.h  SiStripEventSummary.h  SiStripFEDBuffer.h  SiStripFedCabling.h  SiStripRawDigi.h  SiStripRawToDigiUnpacker.h  advRawToDigi.h
tbd/src/: SiStripEventSummary.cxx  SiStripFEDBuffer.cxx  SiStripFedCabling.cxx  SiStripRawToDigiUnpacker.cxx  advRawToDigi.cxx
tests/: CMakeLists.txt  check_digi_conversion.cxx  check_output_write.cxx  check_output_write_read.cxx  check_raw.cxx  check_raw_read.cxx
tests/data/: .~lock.run_1000779_digi_dump_from_cmssw.csv#  detector_info.csv  detector_info_tb2026.csv  detector_info_tb_5_2026.csv  detector_info_tb_7_2026.csv  geofile_testbeam_2026.root  raw_dump_from_cmssw.csv  run000375_digi_rntuple.root  run000375_raw.root  run000375_raw_dump_from_cmssw.csv  run_1000779_digi_dump_from_cmssw.csv  run_1000779_raw.root  run_1000779_raw_dump_from_cmssw.csv
